update css embed class

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,7 +19,7 @@
     height: 100vh;
 }
 
-.block-embed-service-youtube {
+.embed-service-youtube {
     position: relative;
     overflow: hidden;
     width: 100%;
