--- a/src/template.twig
+++ b/src/template.twig
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="./app.css" />
+        <link rel="stylesheet" href="./app.css?{{ timestamp }}" />
 
-        <script src="./js/app.js"></script>
-        <title>{% if title %}{{title}} - {% endif %}Telescope</title>
+        <script src="./js/app.js?{{ timestamp }}"></script>
+        <title>{% if title %}{{ title }} - {% endif %}Telescope</title>
     </head>
     <body>
         <div class="row">
@@ -16,7 +16,7 @@
                 <div id="graph-container"></div>
             </div>
             <div class="column">
-                <div id="page-content">{{content}}</div>
+                <div id="page-content">{{ content }}</div>
             </div>
         </div>
     </body>
