display current node

--- a/src/template.twig
+++ b/src/template.twig
@@ -15,7 +15,7 @@
     <body>
         <div class="row">
             <div class="column-2">
-                <div id="graph-container"></div>
+                <div id="graph-container" data-node="{{ node }}"></div>
             </div>
             <div class="column">
                 <div id="page-content">
