update to sigmjs 2.0.0

--- a/src/template.twig
+++ b/src/template.twig
@@ -35,7 +35,7 @@
                 <ul>
                     {% for link in links %}
                     <li>
-                        <a href="{{ link.type }}-{{ link.slug }}.html">{{
+                        <a href="{{ link.cat }}-{{ link.slug }}.html">{{
                             link.title
                         }}</a>
                     </li>
