fix scss compilation

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -20,7 +20,7 @@ header {
 
 .row {
     display: flex;
-    height: calc(100vh-57px);
+    height: calc(100vh - 57px);
     overflow: hidden;
     flex-direction: row-reverse;
 
