remove hard-coded authors and tags. Use every metadata of ressource to generate the nodes

--- a/src/template.twig
+++ b/src/template.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ language }}">
+<html lang="{{ config.language }}">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,7 +11,9 @@
 
         <script src="./js/app.js?{{ timestamp }}"></script>
         <title>
-            {% if title %}{{ title }} - {% endif %}{{ labels.project_title }}
+            {% if title %}{{ title }} - {% endif %}{{
+                config.labels.project_title
+            }}
         </title>
     </head>
     <body>
@@ -19,13 +21,13 @@
 
         <header>
             <a href="index.html">
-                <h3>{{ labels.project_title }}</h3>
+                <h3>{{ config.labels.project_title }}</h3>
             </a>
 
             <input
                 type="search"
                 name="search"
-                placeholder="{{ labels.search }}"
+                placeholder="{{ config.labels.search }}"
             />
         </header>
 
@@ -33,37 +35,42 @@
             <div class="column-1">
                 <div class="content">{{ content }}</div>
 
-                {% if authors %}
-                <div class="tag-container">
-                    <h3>{{ labels.authors }}</h3>
-                    {% for author in authors %}
-                    <a href="{{ author.link }}" class="tag">{{
-                        author.title
-                    }}</a>
-                    {% endfor %}
-                </div>
-                {% endif %} {% if tags %}
-                <div class="tag-container">
-                    <h3>{{ labels.tags }}</h3>
-                    {% for tag in tags %}
-                    <a href="{{ tag.link }}" class="tag">{{ tag.title }}</a>
-                    {% endfor %}
-                </div>
-                {% endif %} {% if links %}
-                <h3>{{ labels.see_also }}</h3>
-                <ul>
-                    {% for link in links %}
-                    <li>
-                        <a href="{{ link.cat }}-{{ link.slug }}.html">{{
-                            link.title
+                <div class="metadata">
+                    {% if metadata %} {% for cat, data in metadata %}
+                    <div class="tag-container">
+                        <h3>
+                            {% if config.metadata[cat].label %}
+                            {{ config.metadata[cat].label }}
+                            {% else %}
+                            {{ cat }}
+                            {% endif %}
+                        </h3>
+                        {% for item in data %}
+                        <a href="{{ item.link }}" class="tag">{{
+                            item.title
                         }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endfor %} {% endif %}
+                </div>
+
+                <div class="links">
+                    {% if links %}
+                    <h3>{{ config.labels.see_also }}</h3>
+                    <ul>
+                        {% for link in links %}
+                        <li>
+                            <a href="{{ link.cat }}-{{ link.slug }}.html">{{
+                                link.title
+                            }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
             </div>
             <div class="column-2">
-                <div id="graph-container" data-node="{{ node }}"></div>
+                <div id="graph-container" data-node="{{ id }}"></div>
             </div>
         </div>
     </body>
